Added sftp support, js minification, and some extra inline docs

--- a/index.html
+++ b/index.html
@@ -612,12 +612,12 @@
 				<div class="panel-body">
 					<p></p>
 					<div class="media">
-						<a class="pull-left" href="#"> <img class="media-object" src="https://app.divshot.com/img/placeholder-64x64.gif"> </a>
+						<a class="pull-left" href="#"> <img class="media-object" src="https://placehold.it/64x64"> </a>
 						<div class="media-body">
 							<h4 class="media-heading">Media heading</h4>
 							<p>This is the content for your media.</p>
 							<div class="media">
-								<a class="pull-left" href="#"> <img class="media-object" src="https://app.divshot.com/img/placeholder-64x64.gif"> </a>
+								<a class="pull-left" href="#"> <img class="media-object" src="https://placehold.it/64x64""> </a>
 								<div class="media-body">
 									<h4 class="media-heading">Media heading</h4>
 									<p>This is the content for your media.</p>
