--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Jayden Windle">
     <link rel="icon" href="">
 
-    <title>Bootstrap Kitchen Sink</title>
+    <title>Yet Another Starter Template</title>
 
     <link href="style.css" rel="stylesheet">
 
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Bootstrap theme</a>
+            <a class="navbar-brand" href="#">YAST</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
